--- a/src/main/resources/templates/Fragments/Admin/header.html
+++ b/src/main/resources/templates/Fragments/Admin/header.html
@@ -9,7 +9,7 @@
         <button class="menu-toggle">
             <i class="fas fa-bars"></i>
         </button>
-        <h1 class="page-title" th:text="${title}">Título de la página</h1>
+        <h1 class="page-title mb-0" th:text="${title}">Título de la página</h1>
     </div>
 
     <div class="header-right">
